--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   cloud_firestore: ^0.13.4
   firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
+  firebase_auth: ^0.16.0
   provider: ^3.1.0
 
 dev_dependencies:
