--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.16.0
   provider: ^3.1.0
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
