--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_auth: ^0.16.0
   provider: ^3.1.0
   http: ^0.12.1
+  firebase_messaging: ^6.0.0
 
 dev_dependencies:
   flutter_test:
