--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^3.1.0
   http: ^0.12.1
   firebase_messaging: ^6.0.0
+  permission_handler: ^5.0.0
 
 dev_dependencies:
   flutter_test:
