--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   http: ^0.12.1
   firebase_messaging: ^6.0.0
   permission_handler: ^5.0.0
-
+  url_launcher: ^5.4.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
