--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,57 +4,39 @@
 <dict>
 	<key></key>
 	<string>Access to music helps users be happier</string>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SectionSniper</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
+	<string>TAMU Selection Time</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>Access to Media Allows more smiles</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Access to calendars help people schedule their courses</string>
-	<key>NSContactsUsageDescription</key>
-	<string>Access to contacts helps the users connect</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Access to location helps people smile</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Access to location makes people smile</string>
-	<key>NSLocationUsageDescription</key>
-	<string>Access to location makes people smile</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Access to location makes people smile</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Access to motion helps people feel happier</string>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Access to speech recognition helps people be happier</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleVersion</key>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleExecutable</key>
+	<string>$(EXECUTABLE_NAME)</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Access to location makes people smile</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -62,9 +44,27 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Access to contacts helps the users connect</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Access to location makes people smile</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Access to location helps people smile</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Access to speech recognition helps people be happier</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Access to location makes people smile</string>
 </dict>
 </plist>
